# usys

./: README.md  pyproject.toml
app/: commands.py  functions.py  group_cfg.py  help_cfg  main.py  shell.py  user_cfg.py
app/functions/: commands.py  group_cfg.py  user_cfg.py
usys/: main.py
usys/flags/: update.py  version.py
usys/functions/: apache_cfg.py  commands.py  functions.py  group_cfg.py  permission_cfg.py  samba_cfg.py  ssh_cfg.py  user_cfg.py
usys/shell/: dictcompleter.py  foldercompleter.py  shell.py  user_group_completer.py
