[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usys"
version = "0.1.7"
description = "Linux user manager"
readme = "README.md"
authors = [{ name="Wattox00"}]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "prompt_toolkit>=3.0.52",
    "requests>=2.32.5",
]

[project.scripts]
usys = "usys.main:main"
